--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             font-family: 'Inter', sans-serif; 
         }
         .hero-bg {
-            /* Imagen de fondo actualizada con el nombre .jpeg */
             background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/imagen-hero.jpeg'); 
             background-size: cover;
             background-position: center;
@@ -236,10 +235,7 @@
                 <div class="brand-logo p-2"><img src="/Haier_logo.svg.png" alt="Reparación electrodomésticos Haier"></div>
                 <div class="brand-logo p-2"><img src="/mitsubishi.png" alt="Reparación aires acondicionados Mitsubishi Electric"></div>
                 <div class="brand-logo p-2"><img src="/saunier.png" alt="Reparación calderas Saunier Duval"></div>
-                <div class="brand-logo p-2"><img src="/ariston.jpg" alt="Reparación termos Ariston"></div>
-                <div class="brand-logo p-2"><img src="/vaillant.jpg" alt="Reparación calderas Vaillant"></div>
-                <div class="brand-logo p-2"><img src="/junkers.png" alt="Reparación calentadores Junkers"></div>
-            </div>
+                <div class="brand-logo p-2"><img src="/ariston.png" alt="Reparación termos Ariston"></div> <div class="brand-logo p-2"><img src="/vaillant.png" alt="Reparación calderas Vaillant"></div> <div class="brand-logo p-2"><img src="/junkers.png" alt="Reparación calentadores Junkers"></div> </div>
         </div>
     </section>
 
