--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             font-family: 'Inter', sans-serif; 
         }
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/imagen-hero.jpeg'); 
+            /* Corregido el nombre del archivo de imagen de fondo */
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/imagen-hero.jpg.jpeg'); 
             background-size: cover;
             background-position: center;
         }
@@ -226,16 +227,13 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 section-title text-navy" data-lang="brands_title">Trabajamos con las Mejores Marcas</h2>
             <div class="flex flex-wrap justify-center items-center">
                 <div class="brand-logo p-2"><img src="/samsung-logo-wordmark-rgb.png" alt="Reparación electrodomésticos Samsung"></div>
-                <div class="brand-logo p-2"><img src="/lg-logo-1.png" alt="Reparación electrodomésticos LG"></div>
-                <div class="brand-logo p-2"><img src="/balay.png" alt="Reparación electrodomésticos Balay"></div>
-                <div class="brand-logo p-2"><img src="/siemens.png" alt="Reparación electrodomésticos Siemens"></div>
-                <div class="brand-logo p-2"><img src="/Whirlpool_Corporation_Logo_(as_of_2017).svg.png" alt="Reparación electrodomésticos Whirlpool"></div>
+                <div class="brand-logo p-2"><img src="/lg-logo-1.png" alt="Reparación electrodomésticos LG"></div> <div class="brand-logo p-2"><img src="/balay.png" alt="Reparación electrodomésticos Balay"></div>
+                <div class="brand-logo p-2"><img src="/siemens-Photoroom.png" alt="Reparación electrodomésticos Siemens"></div> <div class="brand-logo p-2"><img src="/Whirlpool_Corporation_Logo_(as_of_2017).svg.png" alt="Reparación electrodomésticos Whirlpool"></div>
                 <div class="brand-logo p-2"><img src="/neckar.png" alt="Reparación electrodomésticos Neckar"></div>
                 <div class="brand-logo p-2"><img src="/bosch.png" alt="Reparación electrodomésticos Bosch"></div>
                 <div class="brand-logo p-2"><img src="/Haier_logo.svg.png" alt="Reparación electrodomésticos Haier"></div>
-                <div class="brand-logo p-2"><img src="/mitsubishi.png" alt="Reparación aires acondicionados Mitsubishi Electric"></div>
-                <div class="brand-logo p-2"><img src="/saunier.png" alt="Reparación calderas Saunier Duval"></div>
-                <div class="brand-logo p-2"><img src="/ariston.png" alt="Reparación termos Ariston"></div> <div class="brand-logo p-2"><img src="/vaillant.png" alt="Reparación calderas Vaillant"></div> <div class="brand-logo p-2"><img src="/junkers.png" alt="Reparación calentadores Junkers"></div> </div>
+                <div class="brand-logo p-2"><img src="/mitsubishi-Photoroom.png" alt="Reparación aires acondicionados Mitsubishi Electric"></div> <div class="brand-logo p-2"><img src="/saunier-Photoroom.png" alt="Reparación calderas Saunier Duval"></div> <div class="brand-logo p-2"><img src="/ariston-Photoroom.png" alt="Reparación termos Ariston"></div> <div class="brand-logo p-2"><img src="/vaillant-Photoroom.png" alt="Reparación calderas Vaillant"></div> <div class="brand-logo p-2"><img src="/junkers.png" alt="Reparación calentadores Junkers"></div>
+            </div>
         </div>
     </section>
 
